--- a/README.org
+++ b/README.org
@@ -741,7 +741,13 @@ Configure your source blocks for SyntaxHighlighter like this:
 ,#+END_SRC
 #+end_src
 
-SyntaxHighlighter Evolved always uses the global configuration unless you override it with the line ~#+attr_wp: :syntaxhl light="true"~ placed before the source block. The =:syntaxhl= property tells Org2Blog that everything following it is a configuration parameter for SyntaxHighlighter. Those values get passed on. The =#+ATTR_WP= line immediately *must* immediately precede the =#+BEGIN_SRC= line. It is easier, though, to configure it globally and never touch it again.
+SyntaxHighlighter Evolved always uses the global configuration unless you override it with the line
+
+#+begin_src org
+,#+ATTR_WP: :syntaxhl light="true"
+#+end_src
+
+placed before the source block. The =:syntaxhl= property tells Org2Blog that everything following it is a configuration parameter for SyntaxHighlighter. Those values get passed on. The =#+ATTR_WP= line immediately *must* immediately precede the =#+BEGIN_SRC= line. It is easier, though, to configure it globally and never touch it again.
 
 With SyntaxHighlighter Evolved enabled:
 
