--- a/README.org
+++ b/README.org
@@ -686,10 +686,7 @@ Org2Blog has first-class source block support. The headlines in this section exp
 
 Org2Blog source blocks support both the =#+NAME= and =#CAPTION= property.
 
-*Note*:
-
--
-When you have, and on a source block, then the values are included in the post too.
+*Note*: When you have, and on a source block, then the values are included in the post too.
 
 *Warning*: Source blocks do not work inside of plain lists.
 
